--- a/src/css/flexboxgrid.css
+++ b/src/css/flexboxgrid.css
@@ -211,8 +211,8 @@
   box-sizing: border-box;
   flex: 0 0 auto;
   flex-basis: 100%;
-  padding-right: var(--half-gutter-width, 8px);
-  padding-left: var(--half-gutter-width, 8px);
+  padding-right: var(--half-gutter-width, .75rem);
+  padding-left: var(--half-gutter-width, .75rem);
   max-width: 100%;
 }
 
@@ -569,8 +569,8 @@
   .col-md-offset-12 {
     box-sizing: border-box;
     flex: 0 0 auto;
-    padding-right: var(--half-gutter-width, 8px);
-    padding-left: var(--half-gutter-width, 8px);
+    padding-right: var(--half-gutter-width, .75rem);
+    padding-left: var(--half-gutter-width, .75rem);
   }
 
   .col-md {
@@ -764,8 +764,8 @@
   .col-lg-offset-12 {
     box-sizing: border-box;
     flex: 0 0 auto;
-    padding-right: var(--half-gutter-width, 8px);
-    padding-left: var(--half-gutter-width, 8px);
+    padding-right: var(--half-gutter-width, .75rem);
+    padding-left: var(--half-gutter-width, .75rem);
   }
 
   .col-lg {
@@ -959,8 +959,8 @@
   .col-xl-offset-12 {
     box-sizing: border-box;
     flex: 0 0 auto;
-    padding-right: var(--half-gutter-width, 8px);
-    padding-left: var(--half-gutter-width, 8px);
+    padding-right: var(--half-gutter-width, .75rem);
+    padding-left: var(--half-gutter-width, .75rem);
   }
 
   .col-xl {
